--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "inseq"
-version = "0.4.0"
+version = "0.5.0.dev0"
 description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
 authors = ["The Inseq Team"]
@@ -48,12 +48,12 @@ classifiers = [  #! Update me
 python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
-transformers =  { version = "^4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
+transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
 protobuf = "^3.20.1"
 captum = "^0.6.0"
 numpy = "^1.21.6"
 torchtyping = "^0.1.4"
-torch = "^1.13.1"
+torch = ">=1.13.1"
 scipy = "^1.8.1"
 matplotlib = "~3.5.3"
 tqdm = "^4.64.0"
@@ -63,7 +63,7 @@ ipykernel = { extras = ["notebook"], version = "^6.19.2", optional = true }
 ipywidgets = { extras = ["notebook"], version = "^8.0.0rc2", optional = true }
 joblib = { extras = ["sklearn"], version = "^1.2.0", optional = true }
 scikit-learn = { extras = ["sklearn"], version = "^1.1.1", optional = true }
-datasets = { extras = ["datasets"], version = "^2.3.2", optional = true }
+datasets = { extras = ["datasets"], version = ">=2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
