--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,7 +23,7 @@ commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 coverage[toml]==7.2.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets[datasets]==2.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets==2.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -35,30 +35,28 @@ executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.39.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 frozenlist==1.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec==2023.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fsspec[http]==2023.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 furo==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.13.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-identify==2.5.22 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+identify==2.5.23 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-metadata==6.5.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+importlib-metadata==6.6.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipykernel==6.22.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel[notebook]==6.22.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipywidgets[notebook]==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipywidgets==8.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-joblib[sklearn]==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-client==8.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyter-core==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-lit==16.0.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
-markdown==3.4.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+lit==16.0.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -69,7 +67,7 @@ mypy-extensions==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.
 nest-asyncio==1.5.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.24.2 ; python_version < "3.12" and python_full_version >= "3.8.1"
+numpy==1.24.3 ; python_version < "3.12" and python_full_version >= "3.8.1"
 nvidia-cublas-cu11==11.10.3.66 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-cuda-cupti-cu11==11.7.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-cuda-nvrtc-cu11==11.7.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
@@ -82,7 +80,7 @@ nvidia-cusparse-cu11==11.7.4.91 ; platform_system == "Linux" and platform_machin
 nvidia-nccl-cu11==2.14.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-nvtx-cu11==11.7.91 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pandas==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pandas==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pathspec==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -90,7 +88,7 @@ pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-platformdirs==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+platformdirs==3.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pluggy==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -110,19 +108,18 @@ pytz==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyzmq==25.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-recommonmark==0.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 regex==2023.3.23 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.28.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+requests==2.29.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 responses==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.11" and python_full_version >= "3.8.1"
 ruamel-yaml==0.17.21 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ruff==0.0.252 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safety==2.3.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-scikit-learn[sklearn]==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+scikit-learn==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.98 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.6.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==67.7.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -130,7 +127,6 @@ soupsieve==2.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-basic-ng==1.0.0b1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-copybutton==0.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-gitstamp==0.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-sphinx-markdown-tables==0.0.17 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-applehelp==1.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-devhelp==1.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -149,7 +145,7 @@ toml==0.10.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tornado==6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tornado==6.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.28.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -163,5 +159,5 @@ wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.40.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 widgetsnbextension==4.0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-yarl==1.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+yarl==1.9.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 zipp==3.15.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
