--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,18 @@ commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 fonttools==4.39.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.13.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec==2023.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-metadata==6.5.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+importlib-metadata==6.6.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-lit==16.0.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+lit==16.0.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.24.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+numpy==1.24.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-cublas-cu11==11.10.3.66 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-cuda-cupti-cu11==11.7.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 nvidia-cuda-nvrtc-cu11==11.7.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
@@ -39,11 +40,10 @@ pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 regex==2023.3.23 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.28.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+requests==2.29.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.98 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.6.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==67.7.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sympy==1.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
