--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "inseq"
-version = "0.4.0"
+version = "0.5.0.dev0"
 description = "Interpretability for Sequence Generation Models 🔍"
 readme = "README.md"
 authors = ["The Inseq Team"]
@@ -48,41 +48,38 @@ classifiers = [  #! Update me
 python = ">=3.8.1,<3.12"
 
 rich = "^10.13.0"
-transformers =  { version = "^4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
+transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
 protobuf = "^3.20.1"
 captum = "^0.6.0"
 numpy = "^1.21.6"
 torchtyping = "^0.1.4"
-torch = "^1.13.1"
-scipy = "^1.8.1"
+torch = ">=1.13.1"
 matplotlib = "~3.5.3"
 tqdm = "^4.64.0"
 poethepoet = "^0.13.1"
 
-ipykernel = { extras = ["notebook"], version = "^6.19.2", optional = true }
-ipywidgets = { extras = ["notebook"], version = "^8.0.0rc2", optional = true }
-joblib = { extras = ["sklearn"], version = "^1.2.0", optional = true }
-scikit-learn = { extras = ["sklearn"], version = "^1.1.1", optional = true }
-datasets = { extras = ["datasets"], version = "^2.3.2", optional = true }
+ipykernel = { version = "^6.19.2", optional = true }
+ipywidgets = { version = "^8.0.0rc2", optional = true }
+joblib = { version = "^1.2.0", optional = true }
+scikit-learn = { version = "^1.1.1", optional = true }
+scipy = { version = "^1.8.1", optional = true}
+datasets = { version = ">=2.3.2", optional = true }
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-recommonmark = "^0.7.1"
 sphinx = "^5.3.0"
 sphinxemoji = "^0.2.0"
 sphinxext-opengraph = "^0.4.2"
 sphinx-copybutton = "^0.4.0"
 sphinx-gitstamp = "^0.3.2"
-sphinx-markdown-tables = "^0.0.17"
 furo = "^2022.12.7"
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
-gitpython = "^3.1.30"
 bandit = "^1.7.4"
 safety = "^2.2.0"
 black = "^22.6.0"
@@ -99,8 +96,8 @@ notebook = ["ipykernel", "ipywidgets"]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
-torch-cpu = "python -m pip install torch==1.13.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
-torch-cuda11 = "python -m pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
+torch-cpu = "python -m pip install torch --index-url https://download.pytorch.org/whl/cpu"
+torch-cuda = "python -m pip install torch"
 
 [tool.black]
 # https://github.com/psf/black
@@ -214,6 +211,7 @@ select = [
     "F", # pyflakes
     "W", # pycodestyle warnings
     "C", # flake8-comprehensions
+    #"D", # flake8-docstrings
     "B", # flake8-bugbear
     "Q", # flake8-quotes
     "I", # isort
@@ -238,3 +236,6 @@ max-branches = 20
 
 [tool.ruff.pyupgrade]
 keep-runtime-typing = true
+
+[tool.ruff.pydocstyle]
+convention = "google"
